# rice

./: .document  .gitignore  .travis.yml  AGENTS.md  ANNOUNCE  Address__Registration__Guard_8hpp_source.html  Address__Registration__Guard__defn_8hpp_source.html  Agents.md  Arg_8hpp_source.html  Arg__impl_8hpp_source.html  Arg__operators_8hpp_source.html  Array_8hpp_source.html  BUILDING  Builtin__Object_8hpp_source.html  Builtin__Object__defn_8hpp_source.html  CHANGELOG  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  COPYING  Class_8hpp_source.html  Class__defn_8hpp_source.html  Constructor_8hpp_source.html  Critical__Guard_8hpp_source.html  Data__Object_8hpp_source.html  Data__Object__defn_8hpp.html  Data__Object__defn_8hpp_source.html  Data__Type_8hpp_source.html  Data__Type__defn_8hpp_source.html  Data__Type__fwd_8hpp_source.html  Director_8hpp_source.html  Doxyfile  Enum_8hpp_source.html  Exception_8hpp_source.html  Exception__Base_8hpp_source.html  Exception__Base__defn_8hpp_source.html  Exception__defn_8hpp_source.html  FindRuby.cmake  (+153 more)
rice/: .gitignore  Address_Registration_Guard.cpp  Address_Registration_Guard.hpp  Address_Registration_Guard.ipp  Address_Registration_Guard_defn.hpp  Allocation_Strategies.hpp  Arg.hpp  Arg.ipp  Arg_impl.hpp  Arg_operators.cpp  Arg_operators.hpp  Array.cpp  Array.hpp  Array.ipp  Buffer.hpp  Buffer.ipp  Builtin_Object.hpp  Builtin_Object.ipp  Builtin_Object_defn.hpp  Callback.hpp  Callback.ipp  Class.cpp  Class.hpp  Class.ipp  Class_defn.hpp  Constructor.hpp  Constructor.hpp.mustache  Constructor.ipp  Critical_Guard.hpp  Critical_Guard.ipp  Data_Object.hpp  Data_Object.ipp  Data_Object_defn.hpp  Data_Type.cpp  Data_Type.hpp  Data_Type.ipp  Data_Type_defn.hpp  Data_Type_fwd.hpp  Director.cpp  Director.hpp  (+86 more)
rice/code_gen/: auto_function_wrapper.rb  auto_member_function_wrapper.rb  constructor.rb  gen.rb  object_call.rb  object_call_hpp.rb  object_call_ipp.rb  protect.rb  protect_hpp.rb  protect_ipp.rb  rice_template.rb  wrap_function.rb
rice/cpp_api/: Array.hpp  Array.ipp  Builtin_Object.hpp  Builtin_Object.ipp  Class.hpp  Class.ipp  Class_defn.hpp  Encoding.hpp  Encoding.ipp  Hash.hpp  Hash.ipp  Identifier.hpp  Identifier.ipp  Module.hpp  Module.ipp  Module_defn.hpp  Object.hpp  Object.ipp  Object_defn.hpp  String.hpp  String.ipp  Struct.hpp  Struct.ipp  Symbol.hpp  Symbol.ipp  shared_methods.hpp
rice/detail/: .gitignore  Anchor.hpp  Anchor.ipp  Arguments.hpp  Arguments.ipp  Auto_Function_Wrapper.hpp  Auto_Function_Wrapper.hpp.mustache  Auto_Function_Wrapper.ipp  Auto_Function_Wrapper.ipp.mustache  Auto_Member_Function_Wrapper.hpp  Auto_Member_Function_Wrapper.hpp.mustache  Auto_Member_Function_Wrapper.ipp  Auto_Member_Function_Wrapper.ipp.mustache  Caster.hpp  Caster.ipp  DefaultHandler.hpp  DefaultHandler.ipp  ExceptionHandler.hpp  Exception_Handler.hpp  Exception_Handler.ipp  Exception_Handler_defn.hpp  Forwards.hpp  Forwards.ipp  HandlerRegistry.hpp  HandlerRegistry.ipp  InstanceRegistry.hpp  InstanceRegistry.ipp  InstanceTracker.hpp  InstanceTracker.ipp  Internals.hpp  Internals.ipp  Iterator.hpp  Iterator.ipp  Iterator_Definer.hpp  Jump_Tag.hpp  MethodInfo.hpp  MethodInfo.ipp  ModuleRegistry.hpp  ModuleRegistry.ipp  Native.hpp  (+113 more)
rice/libc/: file.hpp  file.ipp
rice/rice_api/: Arg.hpp  Arg.ipp  ModuleRegistry.hpp  ModuleRegistry.ipp  Native.hpp  Native.ipp  NativeRegistry.hpp  NativeRegistry.ipp  Parameter.ipp  Registries.hpp  Registries.ipp  TypeRegistry.hpp  TypeRegistry.ipp
rice/ruby_api/: Arg.hpp  Arg.ipp  Native.hpp  Native.ipp  NativeRegistry.hpp  NativeRegistry.ipp  Parameter.hpp  Parameter.ipp  Registries.hpp  Registries.ipp  TypeRegistry.hpp
rice/stl/: complex.hpp  complex.ipp  exception.hpp  exception.ipp  exception_ptr.hpp  exception_ptr.ipp  filesystem.hpp  filesystem.ipp  function.hpp  function.ipp  ios_base.hpp  ios_base.ipp  map.hpp  map.ipp  monostate.hpp  monostate.ipp  multimap.hpp  multimap.ipp  optional.hpp  optional.ipp  ostream.hpp  ostream.ipp  pair.hpp  pair.ipp  reference_wrapper.hpp  reference_wrapper.ipp  set.hpp  set.ipp  shared_ptr.hpp  shared_ptr.ipp  smart_ptr.hpp  smart_ptr.ipp  string.hpp  string.ipp  string_view.hpp  string_view.ipp  tuple.hpp  tuple.ipp  type_index.hpp  type_index.ipp  (+10 more)
rice/traits/: attribute_traits.hpp  function_traits.hpp  method_traits.hpp  rice_traits.hpp
sample/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
sample/callbacks/: CMakeLists.txt  extconf.rb  sample_callbacks.cpp
sample/cpp/: BitmapPlusPlus-rb.cpp  BitmapPlusPlus-rb.hpp  BitmapPlusPlus.def  BitmapPlusPlus.hpp  CMakeLists.txt  extconf.rb
sample/enum/: CMakeLists.txt  extconf.rb  sample_enum.cpp  test.rb
sample/inheritance/: CMakeLists.txt  animals.cpp  extconf.rb  test.rb
sample/map/: CMakeLists.txt  extconf.rb  map.cpp  test.rb
sample/ruby/: colormaps.rb  draw_primitives.rb  julia.rb  mandelbrot.rb  random_colors.rb
sample/sig/Bmp/: Bitmap.rbs  BitmapHeader.rbs  Exception.rbs  Pixel.rbs
test/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.am  Makefile.in  build_rice.bat  embed_ruby.cpp  extconf.rb  run.rb  run_all.rb  test_Address_Registration_Guard.cpp  test_Allocation_Strategies.cpp  test_Array.cpp  test_Attribute.cpp  test_Buffer.cpp  test_Builtin_Object.cpp  test_Callback.cpp  test_Class.cpp  test_Constructor.cpp  test_Critical_Guard.cpp  test_Data_Object.cpp  test_Data_Type.cpp  test_Director.cpp  test_Enum.cpp  test_Exception.cpp  test_File.cpp  test_From_Ruby.cpp  test_GVL.cpp  test_Gvl.cpp  test_Hash.cpp  test_Identifier.cpp  test_Implicit_Cast.cpp  test_Incomplete.cpp  test_Inheritance.cpp  test_Instance_Registry.cpp  test_Iterator.cpp  test_JumpException.cpp  test_Jump_Exception.cpp  test_Jump_Tag.cpp  (+49 more)
test/ext/: Makefile.am
test/ext/t1/: CMakeLists.txt  extconf.rb  t1.cpp
test/ext/t2/: CMakeLists.txt  extconf.rb  t2.cpp
test/ruby/: test_multiple_extensions.rb  test_multiple_extensions_same_class.rb  test_multiple_extensions_with_inheritance.rb  test_ractor.rb  test_ractor_unsafe.rb
test/vc/: unittest.sln  unittest.vcxproj
(+816 files in other folders)
